--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -54,7 +54,7 @@
         <meta property="og:image:height" content="1000">
         <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
         <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
-		
+		<link rel="stylesheet" href="./html5-boilerplate_v9.0.0/css/gallery-page-HTML5.css">
 		<link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
         <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
         <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
