--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -54,12 +54,7 @@
         <meta property="og:image:height" content="1000">
         <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
         <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
-		
 		<link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
-        <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-        <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-        <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-	    
        <!-- <link rel="stylesheet" type="text/css" href="CSS/css/nav.css">
         <link rel="stylesheet" href="./html5-boilerplate_v9.0.0/css/style.css">
          <link rel="stylesheet" type="text/css" href="./CSS/css/inline-block.css"> -->
@@ -86,6 +81,13 @@
 	      <link rel="icon" href="./favicon.ico" sizes="any">
         <link rel="icon" href="./icon.svg" type="image/svg+xml">
         <link rel="apple-touch-icon" href="./icon.png">
+
+		<link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
+        <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+        <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+        <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+
+		
         <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="./scripts.js"></script>       
     </head>
