--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -95,19 +95,19 @@
         <div class="wrapper">
 	        <div class="row">
 	            <div class="col-12">        
-                    <header class="data" id=html5-style-2><!--<div id="hdr"> changed to <header>-->
+                    <header class="data" id=html5styleheader><!--<div id="hdr"> changed to <header>-->
                         <h1>StarTrackr!</h1>
                     </header>
 		        </div><!-- end col-12 -->
 	        </div>
             <!--close top section - content area starts -->
-            <div id="content">
+            <div class="data" id="html5stylecontent">
                 <h2>Award winning accommodation, self catering or bed and breakfast</h2>
-                <div id="leftcol">
+                <div class="data" id="html5styleleftcol">
                     <h3>Cottages, converted barns, caravans</h3>
                     <img alt="Cottage interior" title="Cottage interior" height="225" src="../orris0/images/bda2.jpg" width="300"><br>The superb interior of one of our cottages
                 </div>
-                <nav id="style-nav"><!--use the semantic tag <nav>-->
+                <nav class="data" id="html5stylenav"><!--use the semantic tag <nav>-->
                     <ul><!--start of menu list-->
                         <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                         <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>                        
@@ -117,7 +117,7 @@
                         <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                     </ul><!--end of menu list-->
                 </nav><!--</div> removed and replaced with </nav>-->
-                <div id="midcol">
+                <div class="data" id="html5stylemidcol">
                     <h3>Situated in the BDA's beautiful Tourorris's countryside</h3>
                     <img title="Devon countryside" alt="Devon countryside" src="../orris0/images/bda.gif" height="229" width="398">
                 </div>
