--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -52,12 +52,12 @@
         <meta property="og:image" content="https://example.com/rock2.jpg">
         <meta property="og:image" content="https://example.com/rock3.jpg">
         <meta property="og:image:height" content="1000">
-        <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
+         <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
         <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
-		<link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
-       <!-- <link rel="stylesheet" type="text/css" href="CSS/css/nav.css">
+		<!-- <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
+        <link rel="stylesheet" type="text/css" href="CSS/css/nav.css">
         <link rel="stylesheet" href="./html5-boilerplate_v9.0.0/css/style.css">
-         <link rel="stylesheet" type="text/css" href="./CSS/css/inline-block.css"> -->
+        <link rel="stylesheet" type="text/css" href="./CSS/css/inline-block.css"> -->
         <link rel="stylesheet" href="./CSS/nav.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.8.0/normalize.min.css">
         <link rel="stylesheet" href="../orris0/CSS/css/font-awesome.min.css">
