--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -52,7 +52,7 @@
         <meta property="og:image" content="https://example.com/rock2.jpg">
         <meta property="og:image" content="https://example.com/rock3.jpg">
         <meta property="og:image:height" content="1000">
-         <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
+         <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
         <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
 		<!-- <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
         <link rel="stylesheet" type="text/css" href="CSS/css/nav.css">
