--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -118,7 +118,7 @@
                     <img title="Devon countryside" alt="Devon countryside" src="../orris0/images/bda.gif" height="229" width="398">
                 </div>
                 <br class="clear">
-                <div id="navigation">
+                <div class="data" id="html5stylenavigation">
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Buy Now!</a></li>
@@ -126,7 +126,7 @@
                         <li><a href="#">Gift Ideas</a></li>
                     </ul>
                 </div>
-                <p id="intro">
+                <p class="data" id="intro">
                     Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service. Need to know where in the world the best bands, musicians or producers are within 2.2 square meters? You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!
                 </p>
                 <p id="no-script">
@@ -135,7 +135,7 @@
                 <p id="disclaimer">
                     Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of like people so their privacy should be respected.
                 </p>
-                <div id="news">
+                <div class="data"  id="news">
                     <h2>Latest News</h2>
                     <p>
                         Which member of the seminal calypso/lectro band <em>C&amp;C Music Sweatshop</em> was spotted last night at <em>Dirt</em>, the trendy New York restaurant that serves only food caught and retrieved by the chef's own hands?
