--- a/about.html
+++ b/about.html
@@ -144,10 +144,10 @@
 		        <div id="hnav">
                 <ul>
                     <li><a href="index.html">Home Page</a></li>
-                    <li><a href="./page2.html">Page Two</a></li>
-                    <li><a href="./page3.html">Page Three with a long label</a></li>
-                    <li><a href="./page4.html">Page Four</a></li>
-                    <li><a href="./page5.html">Page Five</a></li>
+                    <li><a href="gallery-one-col.html">one-col</a></li>
+                    <li><a href="gallery-2col.html">gallery-2col</a></li>
+                    <li><a href="gallery-3col-mix.html">3col-mix</a></li>
+                    <li><a href="gallery-page-vadilated.html">gallery-page</a></li>
                 </ul>
                 </div>
 	            </div><!-- end col-12 -->
