--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -83,9 +83,9 @@
 		<link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
         <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
         <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-        <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+        <!--<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script> -->
         <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="./scripts.js"></script>       
+        <script type="text/javascript" src="../../orris0/orris0/js/script.js"></script>       
     </head>
     <body>
         <div class="wrapper">
