--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -81,7 +81,7 @@
         <link rel="icon" href="./icon.svg" type="image/svg+xml">
         <link rel="apple-touch-icon" href="./icon.png">
 		<link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
-        <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+        <!-- <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" /> -->
         <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
         <!--<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script> -->
         <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
