--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -59,7 +59,7 @@
         <link rel="stylesheet" href="./html5-boilerplate_v9.0.0/css/style.css">
         <link rel="stylesheet" type="text/css" href="./CSS/css/inline-block.css"> -->
         <link rel="stylesheet" href="./CSS/nav.css">
-        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.8.0/normalize.min.css"> -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.8.0/normalize.min.css">
         <link rel="stylesheet" href="../orris0/CSS/css/font-awesome.min.css">
         <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
         <!--<link rel="stylesheet" href="css/styles.css?v=1.0">-->
