--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -73,8 +73,8 @@
         <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css">
         <!-- SimpleLightbox plugin CSS--
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet">
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="./Myjourneyonline.com_files/css" rel="stylesheet"> 
+        <!-- Core theme CSS (includes Bootstrap)
+        <link href="./Myjourneyonline.com_files/css" rel="stylesheet"> -->
         <link rel="icon" type="image/x-icon" href="../Bootstrap/dist/assets/img/HTMLBadge.ico">
         <link rel="icon" type="image/x-icon" href="../Bootstrap/dist/assets/favicon.ico">
 	    <link rel="icon" href="./favicon.ico" sizes="any">
