--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html ng-app lang="en">
-    <head> 
+    <head>
+		<meta charset="utf8">
         <title>Test page for semantic tags</title>
         <!-- Viewport for responsive web design -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="format-detection" content="telephone=no">
         <meta property="og:title" content="A Basic HTML5 Template">
