--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -82,7 +82,7 @@
                     </ul><!--end of menu list-->
                 </nav><!--</div> removed and replaced with </nav>-->
                 <div class="data" id="html5stylemidcol">
-                    <h3>Situated in the BDA's beautiful Tourorris's countryside</h3>
+                    <h3>Situated in the BDA's beautiful countryside</h3>
                     <img title="Devon countryside" alt="Devon countryside" src="../orris0/images/bda.gif" height="229" width="398">
                 </div>
                 <br class="clear">
