--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app lang="en">
     <head>
-		<meta charset="utf8">
+		<meta charset="UTF8">
         <title>Test page for semantic tags</title>
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
