--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -30,7 +30,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.8.0/normalize.min.css">
         <link rel="stylesheet" href="../orris0/CSS/css/font-awesome.min.css">
         <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
-        <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="./style.css">
         <link rel="alternate" type="application/pdf" href="MainPage.pdf">
         <link rel="author" href="mailto:bakerorris0@gmail.com">
         <link rel="author" type="text/html" href="https://orris0.github.io/orris0/index.html">
