--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -22,6 +22,7 @@
         <!-- Optional Metadata -->
          <!-- <link rel="stylesheet" href="../../orris0/CSS/flexboxgrid.css"> -->
         <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+        <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
 		<!-- <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
         <link rel="stylesheet" type="text/css" href="CSS/css/nav.css">
         <link rel="stylesheet" href="./html5-boilerplate_v9.0.0/css/style.css">
