--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -54,7 +54,8 @@
         <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
         <!--<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script> -->
         <script src="../orris0/js/jquery-1.7.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="../../orris0/orris0/js/scripts.js"></script>       
+        <script type="text/javascript" src="../../orris0/orris0/js/scripts.js"></script>
+        <script type="text/javascript" src="./scripts.js"></script>       
     </head>
     <body>
         <div class="wrapper">
