--- a/index2.html
+++ b/index2.html
@@ -112,7 +112,7 @@
 	<div class="wrapper">
 	    <div class="row">
 	        <div class="col-12">        
-                    <header><!--<div id="hdr"> changed to <header>-->
+                    <header class="data" id="gallerypageheader"<!--<div id="hdr"> changed to <header>-->
                         <h1>TourOrris's (Rural Retreats)</h1>
                         <div id="container">
                             <p>&nbsp;</p>
