--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -61,7 +61,7 @@
         <div class="wrapper">
 	        <div class="row">
 	            <div class="col-12">        
-                    <header class="data" id=html5styleheader><!--<div id="hdr"> changed to <header>-->
+                   <header class="data" id="html5styleheader"><!--<div id="hdr"> changed to <header>-->
                         <h1>StarTrackr!</h1>
                         <div id="container">
                             <p>&nbsp;</p>
