--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="wrapper">
 	    <div class="row">
 	        <div class="col-12">        
-                    <header><!--<div id="hdr"> changed to <header>-->
+                    <header class="data" id="gallerypageheader><!--<div id="hdr"> changed to <header>-->
                         <h1>Practical HTML5 project&#39;s for fun and profit!</h1>
                         <div id="container">
                             <p>&nbsp;</p>
