--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -223,7 +223,7 @@
             </footer>
 			<!-- Vendor JS Files -->
 			<script src="../orris0/main.js"></script>
-            <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
             <script src="../orris0/aos.css"></script>
             <script src="../orris0/bootstrap.bundle.min.js"></script>
             <script src="../orris0/glightbox.min.js"></script>
