--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -221,15 +221,15 @@
                     </div>
                 </div>
             </footer>
-			<!-- Vendor JS Files -->
-			<script src="../orris0/main.js"></script>
+			<!-- Vendor JS Files --
+			<script src="../orris0/main.js"></script> -->
             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
             
             <script src="../orris0/bootstrap.bundle.min.js"></script>
-            <script src="../orris0/glightbox.min.js"></script>
+            <!-- <script src="../orris0/glightbox.min.js"></script>
             <script src="../orris0/isotope.pkgd.min.js"></script>
             <script src="../orris0/swiper-bundle.min.js"></script>
-            <script src="../orris0/validate.js"></script>  
+            <script src="../orris0/validate.js"></script> --> 
     </div><!-- end wrapper -->
 </body><!-- end body  -->
 </html>
