--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -3,6 +3,9 @@
     <head>
 		<meta charset="UTF8">
         <title>Test page for semantic tags</title>
+        <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
+  <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="scripts.js"></script>
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
