--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -5,7 +5,7 @@
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Test page for semantic tags</title>
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
         <script type="text/javascript" src="./scripts.js"></script>
 
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
