--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -45,7 +45,7 @@
         <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css">
         <!-- SimpleLightbox plugin CSS--
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet">
-        <!-- Core theme CSS (includes Bootstrap) -->
+        <!-- Core theme CSS (includes Bootstrap) --
         <link rel="icon" type="image/x-icon" href="../Bootstrap/dist/assets/img/HTMLBadge.ico">
         <link rel="icon" type="image/x-icon" href="../Bootstrap/dist/assets/favicon.ico">
 	    <link rel="icon" href="./favicon.ico" sizes="any">
@@ -56,6 +56,7 @@
         <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
         <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script> 
         <script src="../orris0/js/jquery-1.7.js" type="text/javascript" charset="utf-8"></script>
+    -->
         <script type="text/javascript" src="./js/scripts.js"></script>
         <script type="text/javascript" src="./scripts.js"></script>       
     </head>
