--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -58,7 +58,7 @@
         <script src="../orris0/js/jquery-1.7.js" type="text/javascript" charset="utf-8"></script>
     -->
         <script type="text/javascript" src="./js/scripts.js"></script>
-        <script type="text/javascript" src="./scripts.js"></script>       
+        <script type="text/javascript" src="../../orris0/orris0/scripts.js"></script>       
     </head>
     <body>
         <div class="wrapper">
