--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Test page for semantic tags</title>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
-        <script type="text/javascript" src="./scripts.js"></script>
+        <script type="text/javascript" src="../../orris0/orris0/js/script.js"></script>
 
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="format-detection" content="telephone=no">
@@ -57,8 +57,8 @@
         <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script> 
         <script src="../orris0/js/jquery-1.7.js" type="text/javascript" charset="utf-8"></script>
     -->
-        <script type="text/javascript" src="./js/scripts.js"></script>
-        <script type="text/javascript" src="../../orris0/orris0/scripts.js"></script>       
+        
+        <!-- <script type="text/javascript" src="../../orris0/orris0/scripts.js"></script> -->      
     </head>
     <body>
         <div class="wrapper">
@@ -235,7 +235,7 @@
             <script src="../orris0/validate.js"></script> --> 
     </div><!-- end wrapper -->
     <script type="text/javascript" src="jquery-1.7-min.js"></script>
-    <script type="text/javascript" src="./scripts.js"></script>
+    <script type="text/javascript" src="../../orris0/orris0/js/script.js"></script>
 </body><!-- end body  -->
 </html>
 <!-- View in Browser --
