--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -232,8 +232,8 @@
             <script src="../orris0/swiper-bundle.min.js"></script>
             <script src="../orris0/validate.js"></script> --> 
     </div><!-- end wrapper -->
-    <script type="text/javascript" src="jquery-1.7-min.js"></script>
-    <script type="text/javascript" src="../../orris0/orris0/js/script.js"></script>
+    <script type="text/javascript" src="js/jquery-1.7.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
 </body><!-- end body  -->
 </html>
 <!-- View in Browser --
