--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -219,9 +219,11 @@
                 <a href="https://orris0.github.io/orris0/HTML5-Ch1-7.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
                 <div class="col-12">
                     <div class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
-                        <p>
-                            &copy; Copyright 2010 CelebriTracker Productions
-                        </p>
+                        <div id="farewell">Come back and visit us soon!
+                            <p>
+                                &copy; Copyright 2010 CelebriTracker Productions
+                            </p>
+                        </div>
                     </div>
                 </div>
             </footer>
