--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -5,11 +5,8 @@
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Test page for semantic tags</title>
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
+        <script type="text/javascript" src="js/jquery-1.7.js"></script>
         <script type="text/javascript" src="../orris0/js/script.js"></script>
-        
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
-        <script type="text/javascript" src="../../orris0/orris0/js/script.js"></script>
 
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="format-detection" content="telephone=no">
@@ -237,7 +234,7 @@
             <script src="../orris0/swiper-bundle.min.js"></script>
             <script src="../orris0/validate.js"></script> --> 
     </div><!-- end wrapper -->
-    <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
+    <script type="text/javascript" src="js/jquery-1.7.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
 </body><!-- end body  -->
 </html>
