--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -43,20 +43,9 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css">
-        <!-- SimpleLightbox plugin CSS--
+        <!-- SimpleLightbox plugin CSS-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet">
-        <!-- Core theme CSS (includes Bootstrap) --
-        <link rel="icon" type="image/x-icon" href="../Bootstrap/dist/assets/img/HTMLBadge.ico">
-        <link rel="icon" type="image/x-icon" href="../Bootstrap/dist/assets/favicon.ico">
-	    <link rel="icon" href="./favicon.ico" sizes="any">
-        <link rel="icon" href="./icon.svg" type="image/svg+xml">
-        <link rel="apple-touch-icon" href="./icon.png">
-		
-        <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-        <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-        <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script> 
-        <script src="../orris0/js/jquery-1.7.js" type="text/javascript" charset="utf-8"></script>
-    -->     
+             
     </head>
     <body>
         <div class="wrapper">
