--- a/events.html
+++ b/events.html
@@ -109,10 +109,43 @@
             <![endif]-->
     </head>
     <body>
+    <div class="wrapper">
+        <div class="row">
+            <div class="col-12">
+                <header class="data" id="html5styleheader"><!--<div id="hdr"> changed to <header>-->
+                    <h1>StarTrackr!</h1>
+                    <div id="container">
+                        <p>&nbsp;</p>
+                        <p>Tour Orris (default)</p>
+                        <p>
+                            <a href="../orris0/HTML5-Ch1-7.html">Page 1</a>
+                            <a href="html5-nav.html">Page 2</a>
+                            <a href="simplistic-side-by-side.html">Page 3</a>
+                            <a href="simplistic-html5-java.html">Page 4</a>
+                            <a href="simplistic-html5.html">Page 5</a>
+                            <a href="gallery-one-col.html">Page 6</a>
+                            <a href="gallery-2col.html">Page 7</a>
+                        </p>
+                        <p>&nbsp;</p>
+                        <p class="inline-block">Practical HTML5 Project&#39;s<br>
+                            <a href="gallery-3col-mix.html">Page 1</a>
+                            <a href="gallery-page-validated.html">Page 2</a>
+                            <a href="squares-html5.html">Page 3</a>
+                            <a href="horiz-vert-menu.html">Page 4</a>
+                            <a href="fig2-nifty.html">Page 5</a>
+                            <a href="starter-page.html">Page 6</a>
+                            <a href="index2.html">Page 7</a>
+                        </p>
+                        <p>&nbsp;</p>
+                    </div>
+                </header>
+            </div><!-- end col-12 -->
+        </div>
+    <!-- <body>
         <div class="wrapper">
             <div class="data" id="container">
                 <header>
-                    <!-- svg-text-embed -->
+                    !-- svg-text-embed --
                     <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" width="500px" height="60px"> <text x="20" y="50" style="font-family:times new roman; font-size:20pt; font-weight:bold; letter-spacing:1px; stroke:black; fill:white;">
 			                <h1>A full page roll-over gallery of Services</h1>
 		                        <h2>Hover the mouse over a small picture to see an enlarged version</h2>
@@ -138,7 +171,7 @@
                         Okay, cool, perhaps you'll prefer this <a href="no-js.html">non-JavaScript version</a> of the page.
                     </p>
                     </noscript>
-	        </header><!-- end-header -->
+	        </header> !-- end-header -->
 	            <br class="clear">
                 <div class="col-12"> <!-- close top section - content area starts -->
 		        <div id="hnav">
