--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     <!-- <link rel="stylesheet" href="html5-boilerplate_v9.0.0/css/style.css"> -->
     <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.8.0/normalize.min.css">
-    <!-- <link rel="stylesheet" type="text/css" href="./style.css"> -->
-    <link rel="stylesheet" href="./html5-boilerplate_v9.0.0/css/gallery-page-HTML5.css">
+    <!-- <link rel="stylesheet" type="text/css" href="./style.css"> 
+    <link rel="stylesheet" href="./html5-boilerplate_v9.0.0/css/gallery-page-HTML5.css"> -->
 
     <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
     <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
