--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     </div>
                     <div class="data" id="midcol-1">
                         <div id="gallery-block">
-                            <ul id="col-1">
+                            <ul id="#onecol-1">
                                 <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Ali" title="Ali"><img
                                             class="hid" src="../orris0/images/bda.jpg" alt=""></a></li>
                                 <li><a href="#"><img src="../orris0/bda-1.jpg" alt="Cat" title="Cat"><img class="hid"
@@ -274,7 +274,7 @@
                                 <li><a href="#"><img src="../orris0/bda-2.jpg" alt="Beach" title="Beach"><img
                                             class="hid" src="../orris0/bda-2.jpg" alt=""></a></li>
                             </ul>
-                            <ul id="col-2">
+                            <ul id="#onecol-2">
                                 <li><a href="#"><img src="../orris0/bda-3.jpg" alt="Ferns" title="Ferns"><img
                                             class="hid" src="../orris0/bda-3.jpg" alt=""></a></li>
                                 <li><a href="#"><img src="../orris0/bda-4.jpg" alt="Nico" title="Nico"><img class="hid"
@@ -284,7 +284,7 @@
                                             alt=""></a>
                                 </li>
                             </ul>
-                            <ul id="col-3">
+                            <ul id="#onecol-3">
                                 <li><a href="#"><img src="../orris0/bda-6.jpg" alt="Ancient and modern"
                                             title="Ancient and Modern"><img class="hid" src="i../orris0/bda-6.jpg"
                                             alt=""></a></li>
