--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                             <li class="btn"><a href="#">Home Page</a></li>
                         </ul>
                     </nav>
-                    <div id="rightcol">
+                    <div id="gallerypagerightcol">
                         Secondary information<br><br>
                         <p><a href="http://validator.w3.org/check?uri=referer">
                                 <img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64"
@@ -264,8 +264,8 @@
                         <br class="clear">
                         <p class="advert">Web Design by Orris Baker jr</p>
                     </div>
-                    <div class="data" id="midcol-1">
-                        <div id="gallery-block">
+                    <div class="data" id="gallerypagemidcol-1">
+                        <div id="gallerypagegallery-block">
                             <ul id="#onecol-1">
                                 <li><a href="#"><img src="../orris0/images/bda.jpg" alt="Ali" title="Ali"><img
                                             class="hid" src="../orris0/images/bda.jpg" alt=""></a></li>
