--- a/gallery-3col-mix.html
+++ b/gallery-3col-mix.html
@@ -122,36 +122,46 @@
                             <p>&nbsp;</p>
                         </div>
                     </header> -->
-                <ul id="col-1">
-                    <li><a href="#"><img src="images/alithumb.jpg" title="Ali" alt="Ali">
-                            <img class="hid" src="images/alilarge.jpg" alt=""></a>
-                    </li>
-                    <li><a href="#"><img src="images/catthumb.jpg" title="Cat" alt="Cat">
-                            <img class="hid" src="images/catlarge.jpg" alt=""></a>
-                    </li>
-                    <li><a href="#"><img src="images/beachthumb.jpg" title="Baech" alt="Beach">
-                            <img class="hid" src="images/beachlarge.jpg" alt=""></a>
-                    </li>
-                </ul>
-                <ul id="col-2">
-                    <li><a href="#"><img src="images/childrenthumb.jpg" title="Children" alt="Children">
-                            <img class="hid" src="images/childrenbig.jpg" alt=""></a>
-                    </li>
-                    <li><a href="#"><img src="images/seathumb.jpg" title="Seascape" alt="Seascape">
-                            <img class="hid" src="images/seabig.jpg" alt=""></a>
-                    </li>
-                    <li><a href="#"><img src="images/take-cardthumb.jpg" title="Take a card" alt="Take a card">
-                            <img class="hid" src="images/take-cardbig.jpg" alt=""></a>
-                    </li>
-                </ul>
-                <ul id="col-3">
-                    <li><a href="#"><img src="images/walesthumb.jpg" title="Wales" alt="Wales">
-                            <img class="hid" src="images/walesbig.jpg" alt=""></a>
-                    </li>
-                    <li><a href="#"><img src="images/pensthumb.jpg" title="Chelsea pensioners" alt="Chelsea pensioners">
-                            <img class="hid" src="images/pensbig.jpg" alt=""></a>
-                    </li>
-                </ul>
+                <div id="midcol">
+                    <div id="gallery-block">
+                        <ul id="col-1">
+                            <li><a href="#"><img src="images/alithumb.jpg" alt="Ali" title="Ali">
+                                    <img class="hid" src="images/alibig.jpg" alt="">
+                                </a>
+                            </li>
+                            <li><a href="#"><img src="images/catthumb.jpg" alt="Cat" title="Cat">
+                                    <img class="hid" src="images/catbig.jpg" alt=""></a>
+                            </li>
+                            <li><a href="#"><img src="images/beachthumb.jpg" alt="Beach" title="Beach">
+                                    <img class="hid" src="images/beachbig.jpg" alt=""></a>
+                            </li>
+                        </ul>
+                        <ul id="col-2">
+                            <li><a href="#"><img src="images/fernsthumb.jpg" alt="Ferns" title="Ferns">
+                                    <img class="hid" src="images/fernsbig.jpg" alt=""></a>
+                            </li>
+                            <li><a href="#"><img src="images/nicothumb.jpg" alt="Nico" title="Nico">
+                                    <img class="hid" src="images/nicobig.jpg" alt=""></a>
+                            </li>
+                            <li><a href="#"><img src="images/childbeachthumb.jpg" alt="Child and Beach"
+                                        title="Child and Beach">
+                                    <img class="hid" src="images/childbeachbig.jpg" alt=""></a>
+                            </li>
+                        </ul>
+                        <ul id="col-3">
+                            <li><a href="#"><img src="images/ancientthumb.jpg" alt="Ancient and modern"
+                                        title="Ancient and Modern">
+                                    <img class="hid" src="images/ancientbig.jpg" alt=""></a>
+                            </li>
+                            <li><a href="#"><img src="images/felixthumb.jpg" alt="Felix" title="Felix">
+                                    <img class="hid" src="images/felixbig.jpg" alt=""></a>
+                            </li>
+                            <li><a href="#"><img src="images/cliffthumb.jpg" alt="Cliffs" title="Cliffs">
+                                    <img class="hid" src="images/cliffbig.jpg" alt=""></a>
+                            </li>
+                        </ul><br class="clear">
+                    </div><!--gallery block closed-->
+                </div><!--midcol closed-->
                 <div class="row" style="background-color: #34495e;">
 
                     <div class="col-11">
@@ -216,7 +226,8 @@
                                     <ul>
                                         <li
                                             class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-6 current_page_item menu-item-106">
-                                            <a href="index.html">Our Story</a></li>
+                                            <a href="index.html">Our Story</a>
+                                        </li>
                                         <li
                                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-105">
                                             <a href="#">Our Flowers</a>
