--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -2,10 +2,16 @@
 <html ng-app lang="en">
 
 <head>
-    <meta charset="UTF8">
+
     <!-- Viewport for responsive web design -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Test page for semantic tags</title>
+    
+    <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
+    <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="script.js"></script>
+    <meta charset="UTF-8">
+    
     <script type="text/javascript" src="js/jquery-1.7.js"></script>
     <script type="text/javascript" src="../orris0/js/script.js"></script>
 
