--- a/html5-nav.html
+++ b/html5-nav.html
@@ -20,7 +20,6 @@
 </script>
 <![endif]-->
 </head>
-
 <body>
     <div class="wrapper">
         <div class="row">
@@ -40,7 +39,7 @@
                             <a href="gallery-2col.html">Page 7</a>
                         </p>
                         <p>&nbsp;</p>
-                        <p class="inline-block">Practical HTML5 Project&#39;s<br>
+                        <p class="inline-block">Practical HTML5 Project&#39;s for Fun and Profit<br>
                             <a href="gallery-3col-mix.html">Page 1</a>
                             <a href="gallery-page-validated.html">Page 2</a>
                             <a href="squares-html5.html">Page 3</a>
@@ -70,7 +69,7 @@
     <div class="wrapper">
         <div class="row">
             <div class="col-12">
-                <header class="data" id="html5styleheader"><!--<div id="hdr"> changed to <header>-->
+                <header class="data" id="html5styleheader"><!--<div id="hdr"> changed to <header>--
                 <h1>StarTrackr!</h1>
                 <div id="container">
                     <p>&nbsp;</p>
