--- a/gallery-3col-mix.html
+++ b/gallery-3col-mix.html
@@ -59,13 +59,12 @@
 
 </head>
 </head>
-
 <body>
     <div class="wrapper">
         <div class="row">
             <div class="col-12">
-                <header class="data" id="html5styleheader"><!--<div id="hdr"> changed to <header>-->
-                    <h1>StarTrackr!</h1>
+                <header class="data" id="gallerypageheader">
+                    <h1>TourOrris's (Rural Retreats)</h1>
                     <div id="container">
                         <p>&nbsp;</p>
                         <p>Tour Orris (default)</p>
@@ -79,7 +78,7 @@
                             <a href="gallery-2col.html">Page 7</a>
                         </p>
                         <p>&nbsp;</p>
-                        <p class="inline-block">Practical HTML5 Project&#39;s<br>
+                        <p class="inline-block">Practical HTML5 Project&#39;s for Fun and Profit<br>
                             <a href="gallery-3col-mix.html">Page 1</a>
                             <a href="gallery-page-validated.html">Page 2</a>
                             <a href="squares-html5.html">Page 3</a>
@@ -91,6 +90,18 @@
                         <p>&nbsp;</p>
                     </div>
                 </header>
+                <br class="clear">
+                <div class="col-12"> <!-- close top section - content area starts -->
+                    <div id="hnav">
+                        <ul>
+                            <li><a href="index.html">Home Page</a></li>
+                            <li><a href="./page2.html">Page Two</a></li>
+                            <li><a href="./page3.html">Page Three with a long label</a></li>
+                            <li><a href="./page4.html">Page Four</a></li>
+                            <li><a href="./page5.html">Page Five</a></li>
+                        </ul>
+                    </div>
+                </div><!-- end col-12 -->
 
                 <div id="midcol">
                     <div id="gallery-block">
