--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -52,36 +52,48 @@
         <script type="text/javascript" src="./scripts.js"></script>
 </head>
    <body>
-       <div class="wrapper">
-	    <div class="row">
-	        <div class="col-12">        
-                    <header><!--<div id="hdr"> changed to <header>-->
-                        <h1>TourOrris's (Rural Retreats)</h1>
-                        <div id="container">
-                            <p>&nbsp;</p>
-                            <p>Tour Orris (default)</p>
-                            <p>
-                                <a href="../orris0/HTML5-Ch1-7.html">Page 1</a>
-                                <a href="html5-nav.html">Page 2</a>
-                                <a href="simplistic-side-by-side.html">Page 3</a>
-                                <a href="simplistic-html5-java.html">Page 4</a>
-                                <a href="simplistic-html5.html">Page 5</a>
-                                <a href="gallery-one-col.html">Page 6</a>
-                                <a href="gallery-2col.html">Page 7</a>
-                            </p>
-                            <p>&nbsp;</p>
-                            <p class="inline-block">Practical HTML5 Project&#39;s<br>
-                                <a href="gallery-3col-mix.html">Page 1</a>
-                                <a href="gallery-page-validated.html">Page 2</a>
-                                <a href="squares-html5.html">Page 3</a>
-                                <a href="horiz-vert-menu.html">Page 4</a>
-                                <a href="fig2-nifty.html">Page 5</a>
-                                <a href="starter-page.html">Page 6</a>
-                                <a href="index2.html">Page 7</a>
-                            </p>
-                            <p>&nbsp;</p>
-                        </div>
-                    </header>
+    <div class="wrapper">
+        <div class="row">
+            <div class="col-12">
+                <header class="data" id="gallerypageheader">
+                    <h1>TourOrris's (Rural Retreats)</h1>
+                    <div id="container">
+                        <p>&nbsp;</p>
+                        <p>Tour Orris (default)</p>
+                        <p>
+                            <a href="../orris0/HTML5-Ch1-7.html">Page 1</a>
+                            <a href="html5-nav.html">Page 2</a>
+                            <a href="simplistic-side-by-side.html">Page 3</a>
+                            <a href="simplistic-html5-java.html">Page 4</a>
+                            <a href="simplistic-html5.html">Page 5</a>
+                            <a href="gallery-one-col.html">Page 6</a>
+                            <a href="gallery-2col.html">Page 7</a>
+                        </p>
+                        <p>&nbsp;</p>
+                        <p class="inline-block">Practical HTML5 Project&#39;s for Fun and Profit<br>
+                            <a href="gallery-3col-mix.html">Page 1</a>
+                            <a href="gallery-page-validated.html">Page 2</a>
+                            <a href="squares-html5.html">Page 3</a>
+                            <a href="horiz-vert-menu.html">Page 4</a>
+                            <a href="fig2-nifty.html">Page 5</a>
+                            <a href="starter-page.html">Page 6</a>
+                            <a href="index2.html">Page 7</a>
+                        </p>
+                        <p>&nbsp;</p>
+                    </div>
+                </header>
+                <br class="clear">
+                <div class="col-12"> <!-- close top section - content area starts -->
+                    <div id="hnav">
+                        <ul>
+                            <li><a href="index.html">Home Page</a></li>
+                            <li><a href="./page2.html">Page Two</a></li>
+                            <li><a href="./page3.html">Page Three with a long label</a></li>
+                            <li><a href="./page4.html">Page Four</a></li>
+                            <li><a href="./page5.html">Page Five</a></li>
+                        </ul>
+                    </div>
+                </div><!-- end col-12 -->
 <ul id = "col-1">
 <li><a href="#"><img src = "images/alithumb.jpg" title="Ali" alt="Ali" />
 <img class = "hid" src = "images/alibig.jpg" alt="" /></a>
