--- a/simplistic-side-by-side.html
+++ b/simplistic-side-by-side.html
@@ -178,7 +178,6 @@
 </script>
 <![endif]-->
 </head>
-
 <body>
     <div class="wrapper">
         <div class="row">
@@ -198,7 +197,7 @@
                             <a href="gallery-2col.html">Page 7</a>
                         </p>
                         <p>&nbsp;</p>
-                        <p class="inline-block">Practical HTML5 Project&#39;s<br>
+                        <p class="inline-block">Practical HTML5 Project&#39;s for Fun and Profit<br>
                             <a href="gallery-3col-mix.html">Page 1</a>
                             <a href="gallery-page-validated.html">Page 2</a>
                             <a href="squares-html5.html">Page 3</a>
@@ -222,104 +221,6 @@
                         </ul>
                     </div>
                 </div><!-- end col-12 -->
-                <!--
-<body>
-    <div class="wrapper">
-        <div class="data" id="container">
-	    <header><!--<div id="hdr"> changed to <header>--
-                    <h1>TourOrris's (Rural Retreats)</h1>
-                    <div id="container">
-                                    <p>&nbsp;</p>
-                                    <p>Tour Orris (default)</p>
-                                    <p>
-                                        <a href="../orris0/HTML5-Ch1-7.html">Page 1</a>
-                                        <a href="html5-nav.html">Page 2</a>
-                                        <a href="simplistic-side-by-side.html">Page 3</a>
-                                        <a href="simplistic-html5-java.html">Page 4</a>
-                                        <a href="simplistic-html5.html">Page 5</a>
-                                        <a href="gallery-one-col.html">Page 6</a>
-                                        <a href="gallery-2col.html">Page 7</a>
-                                    </p>
-                                    <p>&nbsp;</p>
-                                    <p class="inline-block">Practical HTML5 Project&#39;s<br>
-                                        <a href="gallery-3col-mix.html">Page 1</a>
-                                        <a href="gallery-page-validated.html">Page 2</a>
-                                        <a href="squares-html5.html">Page 3</a>
-                                        <a href="horiz-vert-menu.html">Page 4</a>
-                                        <a href="fig2-nifty.html">Page 5</a>
-                                        <a href="starter-page.html">Page 6</a>
-                                        <a href="index2.html">Page 7</a>
-                                    </p>
-                                    <p>&nbsp;</p>
-                                </div>
-                </header>
-	    <!-- <header><!--<div id="hdr"> changed to <header>--
-                    <h1>TourOrris's (Rural Retreats)</h1>
-                    <div id="container">
-                                    <p>&nbsp;</p>
-                                    <p>Tour Orris (default)</p>
-                                    <p>
-                                        <a href="../orris0/HTML5-Ch1-7.html">Page 1</a>
-                                        <a href="html5-nav.html">Page 2</a>
-                                        <a href="simplistic-side-by-side.html">Page 3</a>
-                                        <a href="simplistic-html5-java.html">Page 4</a>
-                                        <a href="simplistic-html5.html">Page 5</a>
-                                        <a href="gallery-one-col.html">Page 6</a>
-                                        <a href="gallery-2col.html">Page 7</a>
-                                    </p>
-                                    <p>&nbsp;</p>
-                                    <p class="inline-block">Practical HTML5 Project&#39;s<br>
-                                        <a href="gallery-3col-mix.html">Page 1</a>
-                                        <a href="gallery-page-validated.html">Page 2</a>
-                                        <a href="squares-html5.html">Page 3</a>
-                                        <a href="horiz-vert-menu.html">Page 4</a>
-                                        <a href="fig2-nifty.html">Page 5</a>
-                                        <a href="starter-page.html">Page 6</a>
-                                        <a href="index2.html">Page 7</a>
-                                    </p>
-                                    <p>&nbsp;</p>
-                                </div>
-                </header>
-            <!-- <header>
-                <!-- svg-text-embed --
-                <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" width="500px" height="60px">
-		    <text x="20" y="50" style="font-family:times new roman; font-size:20pt; font-weight:bold; letter-spacing:1px; stroke:black; fill:white;">
-			Tour Orris
-		    </text>
-                </svg>
-                <h1>Practical HTML5 Project&#39;s for Fun and Profit!</h1>
-                <nav>
-                    <ul>
-                        <li><a href="about.html" title="">About Us</a></li>
-                        <li><a href="news.html" title="">News</a></li>
-                        <li><a href="events.html" title="">Events</a></li>
-                        <li><a href="volunteers.html" title="">Volunteers</a></li>
-                        <li><a href="services.html" title="">Services</a></li>
-                        <li><a href="membership.html" title="">Membership</a></li>
-                        <li><a href="index2.html" title="" class="current">Home</a></li>
-                    </ul>
-                </nav>
-                <noscript>
-                    <p>
-                        Hey, your browser has JavaScript turned off!
-                    </p>
-                    <p>
-                        Okay, cool, perhaps you'll prefer this <a href="no-js.html">non-JavaScript version</a> of the page.
-                    </p>
-                </noscript>
-	    </header><!-- end-header --
-	    <br class="clear">
-        <div class="col-12"> <!-- close top section - content area starts --
-		    <div id="hnav">
-                <ul>
-                    <li><a class="active" href="index2.html/">Home Page</a></li>
-                    <li><a href="./page2.html">Page Two</a></li>
-                    <li><a href="./page3.html">Page Three with a long label</a></li>
-                    <li><a href="./page4.html">Page Four</a></li>
-                    <li><a href="./page5.html">Page Five</a></li>
-                </ul>
-            </div>
-	    </div><!-- end col-12 -->
                 <div id="content">
                     <b>A full page roll-over gallery of greetings cards</b>
                     <p><img title="Koala" alt="Koala" height="165" src="images/Koalasmall.jpg" width="220"></p>
