--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -75,7 +75,7 @@
     <!-- SimpleLightbox plugin CSS-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-     <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+    <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
     <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
     <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
     <link href="./CSS/turquoise.css" rel="stylesheet">
@@ -207,6 +207,19 @@
                                                 title="Cliffs"><img class="hid" src="./9landscape.jpg" alt=""></a></li>
                                 </ul>
                                 <br class="clear">
+                                <nav aria-label="Page navigation example">
+                                    <ul class="pagination justify-content-center">
+                                        <li class="page-item disabled">
+                                            <a class="page-link" href="#" tabindex="-1">Previous</a>
+                                        </li>
+                                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                        <li class="page-item">
+                                            <a class="page-link" href="#">Next</a>
+                                        </li>
+                                    </ul>
+                                </nav>
                             </div><!--gallery block closed-->
                         </div><!--midcol closed-->
                     </div><!-- end col-12 -->
