--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -11,8 +11,15 @@
     <!-- Describing about the page -->
     <!-- head section is communicating about the page to the browser -->
     <!-- Anything you write under head is not displayed on the browser content page. -->
-    <meta charset="UTF-8">
+    
     <title>Complete Gallery page & HTML5 Templates</title>
+    <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
+    <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="script.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="REFRESH" content="2400">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="format-detection" content="telephone=no">
