--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -13,9 +13,9 @@
     <!-- Anything you write under head is not displayed on the browser content page. -->
     
     <title>Complete Gallery page & HTML5 Templates</title>
-    <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
-    <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-    <script type="text/javascript" src="script.js"></script>
+    <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8" />
+    <script src="../jQuery-novice-to-ninja/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="../orris0/"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="REFRESH" content="2400">
