--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -62,7 +62,7 @@
             <div class="col-12">
                 <header class="data" id="gallerypageheader">
                     <h1>TourOrris's (Rural Retreats)</h1>
-                    <div id="container">
+                    <div class="data" id="container">
                         <p>&nbsp;</p>
                         <p>Tour Orris (default)</p>
                         <p>
