--- a/html5-nav.html
+++ b/html5-nav.html
@@ -25,8 +25,8 @@
         <div class="row">
             <div class="col-12">
                 <header class="data" id="gallerypageheader">
-                    <h1>TourOrris's (Rural Retreats)</h1>
-                    <div id="container">
+                    <h1>Practical HTML5 Project's for Fun & Profit</h1>
+                    <div class="data" id="container">
                         <p>&nbsp;</p>
                         <p>Tour Orris (default)</p>
                         <p>
@@ -63,92 +63,7 @@
                         </ul>
                     </div>
                 </div><!-- end col-12 -->
-
-                <!--
-<body>
-    <div class="wrapper">
-        <div class="row">
-            <div class="col-12">
-                <header class="data" id="html5styleheader"><!--<div id="hdr"> changed to <header>--
-                <h1>StarTrackr!</h1>
-                <div id="container">
-                    <p>&nbsp;</p>
-                    <p>Tour Orris (default)</p>
-                    <p>
-                        <a href="../orris0/HTML5-Ch1-7.html">Page 1</a>
-                        <a href="html5-nav.html">Page 2</a>
-                        <a href="simplistic-side-by-side.html">Page 3</a>
-                        <a href="simplistic-html5-java.html">Page 4</a>
-                        <a href="simplistic-html5.html">Page 5</a>
-                        <a href="gallery-one-col.html">Page 6</a>
-                        <a href="gallery-2col.html">Page 7</a>
-                    </p>
-                    <p>&nbsp;</p>
-                    <p class="inline-block">Practical HTML5 Project&#39;s<br>
-                        <a href="gallery-3col-mix.html">Page 1</a>
-                        <a href="gallery-page-validated.html">Page 2</a>
-                        <a href="squares-html5.html">Page 3</a>
-                        <a href="horiz-vert-menu.html">Page 4</a>
-                        <a href="fig2-nifty.html">Page 5</a>
-                        <a href="starter-page.html">Page 6</a>
-                        <a href="index2.html">Page 7</a>
-                    </p>
-                    <p>&nbsp;</p>
-                </div>
-                </header>
-
-                <!-- <div id="wrapped-header-container">
-            <!-- HEADER /--
-            <header class="row">
-
-                <div class="col-12"> <!-- close top section - content area starts --
-                    <!-- svg-text-embed --
-                    <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" width="500px"
-                        height="60px">
-                        <text x="20" y="50"
-                            style="font-family:times new roman; font-size:36pt; font-weight:bold; letter-spacing:20px; stroke:black; fill:white;">Tour
-                            Orris</text>
-                    </svg>
-                </div><!-- end col-12 --
-
-                <nav>
-                    <ul>
-                        <li><a href="about.html" title="About Us">About Us</a></li>
-                        <li><a href="news.html" title="Word of the News">News</a></li>
-                        <li><a href="events.html" title="Events">Events</a></li>
-                        <li><a href="volunteers.html" title="Volunteers Needed">Volunteers</a></li>
-                        <li><a href="services.html" title="Services">Services</a></li>
-                        <li><a href="membership.html" title="Register here">Membership</a></li>
-                        <li><a href="index.html" title="Home Page" class="current">Home</a></li>
-                    </ul>
-                </nav>
-
-                <div class="search">
-                    <form method=get action="http://search.yahoo.com/search">
-                        <a href="http://search.yahoo.com/"></a>
-                        <input type="text" name="p" value="Yahoo" size=15>
-                        <input type="hidden" name="fr" value="yscpb"> <input type="submit" value="Search"><br>
-                        <input type="radio" name="vs" value="https://orris0.github.io/orris0" checked="checked">Search
-                        this site
-                    </form>
-
-                </div>
-                </header>
-            </div> <!--end wrapper --> <!-- end header --
-            <nav>
-                <ul>
-                    <li><a href="#" title="Page 2">Page Two</a></li>
-                    <li>
-                        <a href="#" title="Page 3">Page Three
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" title="Page 4">Page Four</a>
-                    </li>
-                    <li><a href="#" title="Home page">
-                            Home Page</a></li>
-                </ul>
-            </nav> -->
+                <!--close top section - content area starts -->
                 <div id="content">
                     <article>
                         <strong>Article<br></strong>From a local newspaper:<p><strong>Are you
